--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,11 +48,15 @@ jobs:
           python-version: ${{ matrix.python_v }}
 
       - name: setup deps
-        run: pip install flake8 pylint pytest pytest-cov numpy scipy h5py tqdm;
+        run: |
+            pip install numpy==1.26.4;
+            pip install scipy==1.11.4;
+            pip install .[test,io];
+            pip install flake8 pylint;
 
       - name: static analysis flake8
         run: |
-            flake8 . --count --select=E9,F63,F7,F82 --ignore=F821  --show-source --statistics;
+            flake8 . --count --select=E9,F63,F7,F82 --ignore=F821 --show-source --statistics;
             flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics;
 
       - name: static analysis py_lint
