--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
     strategy:
       matrix:
         backend: [ np ]
-        python_v: ['3.9']
+        python_v: ['3.12']
       fail-fast: true
 
     steps:
@@ -43,14 +43,14 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: setup python
-        uses: actions/setup-python@v3.1.3
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python_v }}
 
       - name: setup deps
         run: |
             pip install numpy==1.26.4;
-            pip install scipy==1.11.4;
+            pip install scipy==1.14.1;
             pip install .[test,io];
             pip install flake8 pylint;
 
@@ -89,26 +89,32 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        backend: [ np, torch ]
-        python_v: ['3.9', '3.11']
-        pytorch_v: [ 'none', '1.13.1', '2.0' ]
-        numpy_v: [ '1.26', '2.0' ]
-        exclude:
+        include:
           - backend: np
             python_v: '3.9'
-            numpy_v: '2.0'
+            numpy_v: '1.21.6'
+            scipy_v: '1.11.4'
+            torch_v: 'none'
           - backend: np
-            pytorch_v: '1.13.1'
-          - backend: np
-            pytorch_v: '2.0'
-          - backend: torch
-            pytorch_v: 'none'
+            python_v: '3.13'
+            numpy_v: '2.1'
+            scipy_v: '1.14'
+            torch_v: 'none'
           - backend: torch
             python_v: '3.9'
-            pytorch_v: '1.13.1'
+            numpy_v: '1.26'
+            scipy_v: '1.14'
+            torch_v: '1.13.1'
           - backend: torch
-            pytorch_v: '1.13.1'
-            numpy_v: '2.0'
+            python_v: '3.11'
+            numpy_v: '1.26'
+            scipy_v: '1.14'
+            torch_v: '2.1'
+          - backend: torch
+            python_v: '3.13'
+            numpy_v: '2.1'
+            scipy_v: '1.14'
+            torch_v: '2.5'
       fail-fast: false
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -124,21 +130,22 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: setup python
-        uses: actions/setup-python@v3.1.3
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python_v }}
 
       - name: setup deps
         run: |
           pip install numpy==${{ matrix.numpy_v }};
-          pip install flake8 pylint pytest pytest-cov scipy h5py tqdm;
+          pip install scipy==${{ matrix.scipy_v }};
+          pip install .[io,test]
 
       - name: setup pytorch
         if: matrix.backend == 'torch'
         run: |
-          if [[ "${{ matrix.pytorch_v }}" == "1.13.1" ]];
+          if [[ "${{ matrix.torch_v }}" == "1.13.1" ]];
           then
-            pip install torch==${{ matrix.pytorch_v }}+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+            pip install torch==${{ matrix.torch_v }}+cpu --extra-index-url https://download.pytorch.org/whl/cpu
           else
             pip install torch --index-url https://download.pytorch.org/whl/cpu
           fi
@@ -154,9 +161,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        backend: [ torch ]
-        python_v: ['3.9']
-        pytorch_v: ['2.0']
+        include:
+          - python_v: '3.12'
+            numpy_v: '1.26'
+            scipy_v: '1.14'
+            torch_v: '2.4'
       fail-fast: true
 
     steps:
@@ -164,28 +173,29 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: setup python
-        uses: actions/setup-python@v3.1.3
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python_v }}
 
       - name: setup deps
-        run: pip install flake8 pylint pytest pytest-cov numpy scipy h5py tqdm;
+        run: |
+          pip install numpy==${{ matrix.numpy_v }};
+          pip install scipy==${{ matrix.scipy_v }};
+          pip install .[io,test]
 
       - name: setup pytorch
-        if: matrix.backend == 'torch'
         run: |
-          if [[ "${{ matrix.pytorch_v }}" == "1.13.1" ]];
+          if [[ "${{ matrix.torch_v }}" == "1.13.1" ]];
           then
-            pip install torch==${{ matrix.pytorch_v }}+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+            pip install torch==${{ matrix.torch_v }}+cpu --extra-index-url https://download.pytorch.org/whl/cpu
           else
             pip install torch --index-url https://download.pytorch.org/whl/cpu
           fi
 
       - name: Run tests and collect coverage
         run: |
-          cd tests/;
           pytest --cov=yastn --cov-report=xml --backend np -v;
-          pytest --cov=yastn --cov-report=xml --backend ${{ matrix.backend }} -v --cov-append ./tensor;
+          pytest --cov=yastn --cov-report=xml --backend torch -v --cov-append ./tests/tensor;
 
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v4.2.0
