--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,8 @@ jobs:
       - name: tests
         run: |
           pytest -v;
+          pytest -v --tensordot_policy fuse_contracted ./tests/tensor;
+          pytest -v --tensordot_policy no_fusion ./tests/tensor;
 
   deploy-docs:
     if: contains(fromJson('["refs/heads/master","refs/heads/docs"]'), github.ref)
@@ -133,7 +135,10 @@ jobs:
       # Run tests
       - name: tests
         run: |
-          pytest --backend ${{ matrix.backend }} -v
+          pytest -v --backend ${{ matrix.backend }};
+          pytest -v --backend ${{ matrix.backend }} --tensordot_policy fuse_contracted ./tests/tensor;
+          pytest -v --backend ${{ matrix.backend }} --tensordot_policy no_fusion ./tests/tensor;
+
 
   test-full-coverage:
     needs: [test-basic, test-full]
@@ -166,8 +171,11 @@ jobs:
 
       - name: Run tests and collect coverage
         run: |
-          pytest --cov=yastn --cov-report=xml --backend np -v;
-          pytest --cov=yastn --cov-report=xml --backend torch -v --cov-append ./tests/tensor;
+          pytest -v --cov=yastn --cov-report=xml --backend np;
+          pytest -v --cov=yastn --cov-report=xml --backend np --tensordot_policy fuse_contracted --cov-append ./tests/tensor;
+          pytest -v --cov=yastn --cov-report=xml --backend np --tensordot_policy no_fusion --cov-append ./tests/tensor;
+          pytest -v --cov=yastn --cov-report=xml --backend torch --cov-append ./tests/tensor;
+          pytest -v --cov=yastn --cov-report=xml --backend torch --tensordot_policy no_fusion --cov-append ./tests/tensor;
 
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v4.2.0
