--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: setup deps
         run: |
-            pip install .[test];
+            pip install ".[test]";
             pip install flake8 pylint;
 
       - name: static analysis flake8
