--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,9 @@ jobs:
 
       - name: setup deps
         run: |
-            pip install mkl
-            pip install numpy==2.1;
-            pip install scipy==1.13;
+            pip install mkl;
+            pip install numpy;
+            pip install scipy;
             pip install .[test];
             pip install flake8 pylint;
 
