--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ classifiers = [
 dependencies = [
     "numpy>=1.21.6",
     "scipy>=1.11.4",
-    "tqdm"
+    "tqdm",
+    "primme>=0.4.0",
 ]
 dynamic = ["version"]
 
