--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,13 +67,13 @@ jobs:
           pytest -v --ignore ./experimental;
           pytest -v --tensordot_policy fuse_contracted ./tests/tensor;
           pytest -v --tensordot_policy no_fusion ./tests/tensor;
-  
-  # runs basic tests on torch backend. 
+
+  # runs basic tests on torch backend.
   test-basic-torch-peps:
     if: |
       contains(fromJson('["refs/heads/tests", "refs/heads/feat_fp_refactor", "refs/heads/feat_fp_tests2"]'), github.ref) ||
       ( github.event_name == 'pull_request' && contains(fromJson('["master",]'), github.base_ref) )
-    
+
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
@@ -89,7 +89,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-      
+
       - name: setup deps
         run: |
           pip install flake8 pylint;
@@ -99,7 +99,7 @@ jobs:
       - name: setup pytorch
         run: |
             pip install torch==2.7 --index-url https://download.pytorch.org/whl/cpu
-      
+
       - name: static analysis flake8
         run: |
             flake8 . --count --select=E9,F63,F7,F82 --ignore=F821 --show-source --statistics;
@@ -114,7 +114,7 @@ jobs:
         run: |
           pytest -v --backend torch --tensordot_policy fuse_contracted ./tests/tensor;
           pytest -v --backend torch --tensordot_policy no_fusion ./tests/tensor;
-          pytest -v --backend torch ./tests/peps
+          pytest -v --backend torch ./tests/peps;
 
 
   deploy-docs:
@@ -192,7 +192,7 @@ jobs:
       # Run tests
       - name: tests
         run: |
-          pytest -v --backend ${{ matrix.backend }};
+          pytest -v --backend ${{ matrix.backend }} ./tests;
           pytest -v --backend ${{ matrix.backend }} --tensordot_policy fuse_contracted ./tests/tensor;
           pytest -v --backend ${{ matrix.backend }} --tensordot_policy fuse_to_matrix ./tests/tensor;
           pytest -v --backend ${{ matrix.backend }} --tensordot_policy no_fusion ./tests/tensor;
@@ -234,11 +234,11 @@ jobs:
 
       - name: Run tests and collect coverage
         run: |
-          pytest -v --cov=yastn --cov-report=xml --backend np;
+          pytest -v --cov=yastn --cov-report=xml --backend np ./tests;
           pytest -v --cov=yastn --cov-report=xml --backend np --tensordot_policy no_fusion --cov-append ./tests/tensor;
           pytest -v --cov=yastn --cov-report=xml --backend np --tensordot_policy fuse_contracted --cov-append ./tests/tensor;
           pytest -v --cov=yastn --cov-report=xml --backend np --tensordot_policy fuse_to_matrix --cov-append ./tests/tensor;
-          pytest -v --cov=yastn --cov-report=xml --backend torch --cov-append ./tests/tensor;
+          pytest -v --cov=yastn --cov-report=xml --backend torch --cov-append ./tests/peps;
           pytest -v --cov=yastn --cov-report=xml --backend torch --tensordot_policy no_fusion --cov-append ./tests/tensor;
           pytest -v --cov=yastn --cov-report=xml --backend torch --tensordot_policy fuse_contracted --cov-append ./tests/tensor;
           pytest -v --cov=yastn --cov-report=xml --backend torch --tensordot_policy fuse_to_matrix --cov-append ./tests/tensor;
