--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
       - name: tests
         run: |
           pytest -v --ignore ./experimental;
-          pytest -v --tensordot_policy fuse_contracted ./tests/tensor;
+          pytest -v --tensordot_policy fuse_to_matrix ./tests/tensor;
           pytest -v --tensordot_policy no_fusion ./tests/tensor;
 
   # runs basic tests on torch backend.
@@ -112,9 +112,9 @@ jobs:
       # Run tests
       - name: tests
         run: |
-          pytest -v --backend torch --tensordot_policy fuse_contracted ./tests/tensor;
-          pytest -v --backend torch --tensordot_policy no_fusion ./tests/tensor;
           pytest -v --backend torch ./tests/peps;
+          pytest -v --backend torch --tensordot_policy fuse_to_matrix  ./tests/tensor;
+          pytest -v --backend torch --tensordot_policy no_fusion ./tests/tensor;
 
 
   deploy-docs:
@@ -193,7 +193,6 @@ jobs:
       - name: tests
         run: |
           pytest -v --backend ${{ matrix.backend }} ./tests;
-          pytest -v --backend ${{ matrix.backend }} --tensordot_policy fuse_contracted ./tests/tensor;
           pytest -v --backend ${{ matrix.backend }} --tensordot_policy fuse_to_matrix ./tests/tensor;
           pytest -v --backend ${{ matrix.backend }} --tensordot_policy no_fusion ./tests/tensor;
 
@@ -234,14 +233,12 @@ jobs:
 
       - name: Run tests and collect coverage
         run: |
-          pytest -v --cov=yastn --cov-report=xml --backend np ./tests;
+          pytest -v --cov=yastn --cov-report=xml --backend torch ./tests;
+          pytest -v --cov=yastn --cov-report=xml --backend torch --tensordot_policy no_fusion --cov-append ./tests/tensor;
+          pytest -v --cov=yastn --cov-report=xml --backend torch --tensordot_policy fuse_to_matrix --cov-append ./tests/tensor;
           pytest -v --cov=yastn --cov-report=xml --backend np --tensordot_policy no_fusion --cov-append ./tests/tensor;
           pytest -v --cov=yastn --cov-report=xml --backend np --tensordot_policy fuse_contracted --cov-append ./tests/tensor;
           pytest -v --cov=yastn --cov-report=xml --backend np --tensordot_policy fuse_to_matrix --cov-append ./tests/tensor;
-          pytest -v --cov=yastn --cov-report=xml --backend torch --cov-append ./tests/peps;
-          pytest -v --cov=yastn --cov-report=xml --backend torch --tensordot_policy no_fusion --cov-append ./tests/tensor;
-          pytest -v --cov=yastn --cov-report=xml --backend torch --tensordot_policy fuse_contracted --cov-append ./tests/tensor;
-          pytest -v --cov=yastn --cov-report=xml --backend torch --tensordot_policy fuse_to_matrix --cov-append ./tests/tensor;
 
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v4.2.0
